ARROW-14197: [C++][Compute] Fixing wrong buffer size in GrouperFastImpl

Fixing wrong buffer size in GrouperFastImpl (introduced in recent refactoring of SwissTable that introduced "find" method).
Also adding markers at the start and end of each temporary vector to check buffer overruns in the future.

Closes #11335 from michalursa/ARROW-14197-tpch-hang

Authored-by: michalursa <michal@ursacomputing.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>